frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.elkrey.service: frontend
  name: frontend
  namespace: chat-socket-challenge-angular-chat-net
spec:
  ports:
    - name: "4200"
      port: 4200
      targetPort: 80
  selector:
    io.elkrey.service: frontend
