mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.elkrey.service: mongo
  name: mongo
  namespace: chat-socket-challenge-angular-chat-net
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    io.elkrey.service: mongo
