nging-ingress-nodeport.yaml
#apiVersion: v1
#kind: Service
#metadata:
  #name: nginx-ingress
  #namespace: chat-socket-challenge-angular-chat-net
#spec:
  #type: NodePort
  #ports:
    #- port: 80
      #targetPort: 80
      #nodePort: 30080
      #protocol: TCP
      #name: http
  #selector:
    #io.elkrey.service: nginx-ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: chat-socket-challenge-angular-chat-net
spec:
  ingressClassName: nginx
  rules:
  - host: "frontend.loclahost.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 4200
  - host: "backend.loclahost.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend
            port:
              number: 8080
